# SmallCTL

./: .bug-report.md.swp  .env.example  .gitignore  .smallctl.yaml.example  27-b-patched.html  4b-baseline-prompt-before-fixes.html  4b-baseline-prompt-partial-5-30-25.html  4b-baseline-prompt.md.before-fixes  4b-baseline-prompt.md.partial-1455  AGENTS.md  README.md  UI_TROUBLESHOOTING_HANDOVER.md  fizzbuzz.py  foginstall.txt  found-bugs.md  hand-over.md  handover-git-tools-gating.md  install.sh  large-file-refactor.md  llm-compile-lite-plan.md  llm-explainer.html  logwatch.py  md_to_report_html.py  network_diagram.txt  output.html  path_test_plan.md  plan.md  portainer_cli.py  pyproject.toml  rca_45654d24_file_read_loop.md  rca_cd4d5f8a_preflight.md  rca_session_8bdb0d26_3c840685_dcab9db1.md  rca_session_a707ce3f.md  rch-rewoo-refine-plan.md  repair_plan_fc664ed3.md  repair_scaffold_fixes.patch  report-template.html  rewoo-harness-plan.md  run_verification.py  tmp_plan.md  (+1 more)
Agent-Tools/: .symbolmap.json  AGENTS.md  agent_tools_lib.py  checkpoint_browser.py  fama_inspector.py  model_output_lint.py  promptdiff.py  (+9 more)
aho/: README.md  __init__.py  artifact_guard.py  auto_batch_dispatcher.py  bug_tracker.jsonl  challenge_loop.py  challenge_summary_20260523_133522.json  challenge_summary_20260523_133531.json  challenge_summary_20260523_133619.json  challenge_summary_20260523_134242.json  challenge_summary_20260523_134356.json  challenges.json  challenges.text  challenges_30.json  coding_challenges_config.json  config.py  context_optimizer.py  context_optimizer_v2.py  eval.py  fact_extractor.py  fact_validator.py  feature_flags.py  git_utils.py  harness_config.json  harness_runner.py  inline_results_metrics.py  log_review.py  logging_aho.py  main.py  mock_client.py  mock_tools.py  mutation.py  openrouter_proxy.py  production_config.json  program.md  progress_guard.py  pyproject.toml  researcher.py  run_aho_baseline.sh  run_baseline.out  (+8 more)
aho/aho_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aho/git_manager/: vcs.py
aho/hypothesis/: engine.py
aho/knowledge_store/: base.py  history.json
aho/metrics/: inline_results_metrics.jsonl
aho/static_analysis/: analyzer.py  config_verifier.py
aho/tests/: test_log_review.py  test_tool_plan_eval_runner.py
aho/validation/: pipeline.py  probing_suite.py
(+755 files in other folders)
