[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smallctl"
version = "0.1.0"
description = "Terminal UI agentic harness with OpenAI-compatible API support"
requires-python = ">=3.10"
dependencies = [
  "aiofiles",
  "ansible-core",
  "ansible-runner",
  "click",
  "httpx",
  "jmespath",
  "langgraph>=0.2,<1.0",
  "openai",
  "pydantic",
  "pyyaml",
  "rich",
  "textual",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[project.scripts]
smallctl = "smallctl.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
