[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smallctl"
version = "0.1.1"
description = "Terminal UI agentic harness with OpenAI-compatible API support"
requires-python = ">=3.10"
dependencies = [
  "aiofiles",
  "click",
  "httpx",
  "jmespath",
  "langgraph>=0.2,<1.0",
  "libcst",
  "openai",
  "pydantic",
  "pyyaml",
  "rich",
  "textual",
]

[project.optional-dependencies]
debian = [
  "python-debian>=0.1.49",
]
dev = [
  "mypy",
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[project.scripts]
smallctl = "smallctl.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
smallctl = ["ui/*.tcss"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
